# lambdalog

./: .gitignore  README  Site.hs  default.nix  deploy.sh  lambdalog.cabal  release.nix
Lambdalog/: Util.hs
code/gadts-in-scala/: .gitignore  Exp.hs  Exp.scala  FailedExp.scala  README
css/: default.css
drafts/: 2011-07-08-sharing-recovery.markdown  all-about-type-classes.markdown  crefine.markdown  definition-follows-meaning.markdown  docker-build-scripts.markdown  gadts-and-languages.markdown  gadts-in-scala.markdown  generic-matrix-multiplication.markdown  isabelle-dump.markdown  isabelle-manual.markdown  seL4-problems.markdown  sharing-recovery-part-1.markdown  sharing-recovery-part-2.markdown  unnamed.markdown
material/: README
material/gadts-in-scala/: Exp.hs  FailedExp.scala
material/generic-matrix-multiplication/correspondence/: 2011-11-21-reply-to-conal-elliott.txt
nix/: fetchNixPkgs.nix
paper-of-the-day/: 2011-07-28-beautiful-differentiation.markdown
posts/: 2009-12-23-almost-christmas.markdown  2011-05-16-reifying-type-classes-with-gadts.markdown  2011-05-21-context-sensitive-aliases-for-git.markdown  2011-06-27-generic-dot-products.markdown  2011-11-22-gadts-in-scala.markdown  2014-12-12-docker-build-scripts.markdown  2018-08-26-cabal-vs-stack.md  2018-09-01-haskell-development-with-nix.md
src/: Main.hs
src/Lambdalog/: Util.hs
static/sharing-recovery/graphviz/: example_1.dot  example_2.dot  example_3.dot  example_after.dot  example_before.dot  fib_4_after_phase_1.dot  fib_4_heap.dot  fib_4_recovered.dot  generate_pngs.sh
templates/: default.html  index.html  post-concat.html  post-list.html  post.html  postbody.html  posts-with-tag.html  recent-posts-list.html
