name:              LambdaLog
version:           0.0.1
license:           BSD3
license-file:      LICENSE
author:            Sean Seefried
maintainer:        Sean Seefried
synopsis:          My blog
description:       My blog
category:          Web
stability:         Experimental
cabal-version:     >= 1.16
build-type:        Simple
homepage:          http://lambdalog.seanseefried.com

build-depends: base

executable         Site
    default-language:  Haskell2010
    ghc-options: -Wall -threaded


    main-is:       Site.hs
    hs-source-dirs: .

    build-depends: base,
                   time,
                   filepath,
                   old-locale,
                   containers,
                   hakyll,
                   pandoc
